ensured question 3 of the tour doesn't overflow on narrow screens

--- a/app/assets/stylesheets/tour.scss
+++ b/app/assets/stylesheets/tour.scss
@@ -19,7 +19,9 @@
 }
 
 @media (max-width: 768px) {
-  .tour-editor-wrapper {
+
+  .tour-editor-wrapper,
+  .tour-post-wrapper {
     order: 2;
   }
 
